# docs/swagger.json
@@ -88,7 +88,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/response.APIResponse"
+                                "$ref": "#/definitions/response.AccountListSwaggerResponse"
                             }
                         }
                     },
@@ -134,7 +134,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.AccountListSwaggerResponse"
                         }
                     },
                     "400": {
@@ -179,7 +179,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.AccountListSwaggerResponse"
                         }
                     },
                     "404": {
@@ -303,7 +303,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/response.TransactionListSwaggerResponse"
+                                "$ref": "#/definitions/response.BalanceListSwaggerResponse"
                             }
                         }
                     },
@@ -339,7 +339,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/response.APIResponse"
+                                "$ref": "#/definitions/response.CategoryListSwaggerResponse"
                             }
                         }
                     },
@@ -385,7 +385,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.CategoryListSwaggerResponse"
                         }
                     },
                     "400": {
@@ -430,7 +430,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.CategoryListSwaggerResponse"
                         }
                     },
                     "404": {
@@ -788,6 +788,17 @@
                 }
             }
         },
+        "dto.BalanceDTO": {
+            "type": "object",
+            "properties": {
+                "Balance": {
+                    "type": "number"
+                },
+                "ID": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.CategoryDTO": {
             "type": "object",
             "properties": {
@@ -913,6 +924,111 @@
                 },
                 "meta": {},
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.AccountListSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.AccountResponse"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.AccountResponse": {
+            "type": "object",
+            "properties": {
+                "Balance": {
+                    "$ref": "#/definitions/dto.BalanceDTO"
+                },
+                "BalanceID": {
+                    "type": "integer"
+                },
+                "Descriptions": {
+                    "type": "string"
+                },
+                "ID": {
+                    "type": "integer"
+                },
+                "Name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.BalanceListSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.BalanceResponse"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.BalanceResponse": {
+            "type": "object",
+            "properties": {
+                "Account": {
+                    "$ref": "#/definitions/dto.AccountDTO"
+                },
+                "AccountID": {
+                    "type": "integer"
+                },
+                "Balance": {
+                    "type": "number"
+                },
+                "ID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.CategoryListSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.CategoryResponse"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.CategoryResponse": {
+            "type": "object",
+            "properties": {
+                "Descriptions": {
+                    "type": "string"
+                },
+                "ID": {
+                    "type": "integer"
+                },
+                "Name": {
+                    "type": "string"
+                },
+                "Type": {
                     "type": "string"
                 }
             }
