# internal/dto/response/category_response.go
@@ -1,0 +1,8 @@
+package response
+
+type CategoryResponse struct {
+	ID           uint   `json:"ID"`
+	Name         string `json:"Name"`
+	Type         string `json:"Type"`
+	Descriptions string `json:"Descriptions"`
+}
